--- a/src/pages/articles/chatgpt.mdx
+++ b/src/pages/articles/chatgpt.mdx
@@ -8,7 +8,9 @@ export const meta = {
     `But what about robotics? What about the software ecosystem around robotics? For most people, the major move forward has been the Robot Operating System (ROS). It’s enabled more people to utilize other people’s code by creating drivers and systems that have already been prebuilt.`,
 }
 
-export default (props) => <ArticleLayout meta={meta} {...props} />
+export default function Chatgpt(props) {
+  return <ArticleLayout meta={meta} {...props} />;
+}
 
 ## INTRODUCTION
 
