--- a/src/pages/articles/amazon.mdx
+++ b/src/pages/articles/amazon.mdx
@@ -8,9 +8,7 @@ export const meta = {
      `I'm excited to announce that I will working at Amazon as a SDE Intern this fall. I'm very excited for this opportunity...`,
 }
 
-export default function Amazon(props) {
-  return <ArticleLayout meta={meta} {...props} />;
-}
+export default (props) => <ArticleLayout meta={meta} {...props} />
 
 
 I'm excited to announce that I will working at Amazon as a SDE Intern this fall. I'm very excited for this opportunity! I want to thank my family and friends for always being by my side and for everyone who helped me throughout the recruitment process. I'd also like to give a huge shout out to my friends Yonatan Yohannes, Saurabh Khanal, and Sagar Sapkota for their constant support throughout this whole process. Can't wait to start this next chapter in my career!
