--- a/src/pages/articles/chatgpt.mdx
+++ b/src/pages/articles/chatgpt.mdx
@@ -5,7 +5,8 @@ export const meta = {
   date: '2023-05-03',
   title: 'ChatGPT, Generative AI, & AI Hallucinations',
   description:
-    `But what about robotics? What about the software ecosystem around robotics? For most people, the major move forward has been the Robot Operating System (ROS). It’s enabled more people to utilize other people’s code by creating drivers and systems that have already been prebuilt.`,
+    `Artificial Intelligence (AI) has been a hot topic of discussion since the turn of the last century, and within the last decade there has been rapid advances within the space including general public access to state of the art models. Within the last year, the generative AI space - a subset of AI systems which can be utilized to generate content including images, audio, code, and simulations - has been rapidly adopted throughout various sectors including healthcare, finance, transportation, and retail.[2] The surge in open-source access of big data and computing resources can be linked to the wider accessibility of open source resources for AI model development. Integrated systems such as GPT have shown the capability of being utilized in larger systems and business use-cases, and the performance of this technology continues to advance rapidly everyday through the efforts of large corporations such as OpenAI and Microsoft along with the efforts of independent researchers and AI/ML enthusiasts. Currently, AI systems such as GPT, LLAMA, HuggingFace-GPT, have reached a stage where the capabilities of these systems are not only capable of performing simple tasks but is also fully stable in higher-level task requiring object recognition, natural language processing, and decision-making with the ability to generate human-like responses.[2][4] These responses follow logical thought-processing and convey complex data and information in a response which is human-like. 
+     Generative AI has been the primary focus of recent advancements within the AI space and has seen significant development with platforms such as OpenAI, Microsoft, and Meta leading the way. ChatGPT, a large language model (LLM) developed by OpenAI, is a prominent example of generative AI that can simulate human-like conversations and generate responses that are indistinguishable from human-like responses...`,
 }
 
 export default (props) => <ArticleLayout meta={meta} {...props} />
